--- a/requests/in_progress/req-5-b.yaml
+++ b/requests/in_progress/req-5-b.yaml
@@ -6,3 +6,5 @@ target:
 
 amp_uid: n1y4K9n6
 amp_submit_time: 2023-06-14T17:26:41.936Z
+amp_start_time: 2023-06-14T17:26:45.813Z
+amp_workflow_id: aJx0gqa5
