--- a/requests/completed/req-5-a.yaml
+++ b/requests/completed/req-5-a.yaml
@@ -8,3 +8,11 @@ amp_uid: RT8sEnjc
 amp_submit_time: 2023-06-14T17:26:40.263Z
 amp_start_time: 2023-06-14T17:26:42.882Z
 amp_workflow_id: FBiXH4iP
+amp_end_time: 2023-06-14T17:26:48.716Z
+# completed without errors
+output: |
+  sample: invalid yaml
+  
+  multi-line output
+  
+  
