--- a/requests/completed/req-5-b.yaml
+++ b/requests/completed/req-5-b.yaml
@@ -8,3 +8,11 @@ amp_uid: n1y4K9n6
 amp_submit_time: 2023-06-14T17:26:41.936Z
 amp_start_time: 2023-06-14T17:26:45.813Z
 amp_workflow_id: aJx0gqa5
+amp_end_time: 2023-06-14T17:26:51.589Z
+# completed without errors
+output: |
+  sample: invalid yaml
+  
+  multi-line output
+  
+  
