Update on start of req6a.yaml

--- a/requests/in_progress/req6a.yaml
+++ b/requests/in_progress/req6a.yaml
@@ -6,3 +6,5 @@ target:
 
 amp_uid: YEkK6kF2
 amp_submit_time: 2023-06-14T17:28:47.297Z
+amp_start_time: 2023-06-14T17:28:52.867Z
+amp_workflow_id: SU63DKOS
