Update on start of req6b.yaml

--- a/requests/in_progress/req6b.yaml
+++ b/requests/in_progress/req6b.yaml
@@ -6,3 +6,5 @@ target:
 
 amp_uid: rzlXF4Pa
 amp_submit_time: 2023-06-14T17:28:49.048Z
+amp_start_time: 2023-06-14T17:28:55.812Z
+amp_workflow_id: tmvUy9c5
