--- a/requests/completed/req6a.yaml
+++ b/requests/completed/req6a.yaml
@@ -8,3 +8,11 @@ amp_uid: YEkK6kF2
 amp_submit_time: 2023-06-14T17:28:47.297Z
 amp_start_time: 2023-06-14T17:28:52.867Z
 amp_workflow_id: SU63DKOS
+amp_end_time: 2023-06-14T17:28:58.721Z
+# completed without errors
+output: |
+  sample: invalid yaml
+  
+  multi-line output
+  
+  
