Update on start of hi1.yaml

--- a/requests/in_progress/hi1.yaml
+++ b/requests/in_progress/hi1.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: pCjXe8o5
 amp_submit_time: 2023-06-14T21:18:29.382Z
+amp_start_time: 2023-06-14T21:18:33.825Z
+amp_workflow_id: Q0YEexZJ
