Update on completion of hi1.yaml

--- a/requests/completed/hi1.yaml
+++ b/requests/completed/hi1.yaml
@@ -9,3 +9,8 @@ amp_uid: pCjXe8o5
 amp_submit_time: 2023-06-14T21:18:29.382Z
 amp_start_time: 2023-06-14T21:18:33.825Z
 amp_workflow_id: Q0YEexZJ
+amp_end_time: 2023-06-14T21:20:07.431Z
+
+output: |
+  
+  
