Update on start of hi2b.yaml

--- a/requests/in_progress/hi2b.yaml
+++ b/requests/in_progress/hi2b.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: GHwr9udS
 amp_submit_time: 2023-06-14T21:23:00.157Z
+amp_start_time: 2023-06-14T21:23:04.409Z
+amp_workflow_id: AN1YKwab
