Update on start of hi2a.yaml

--- a/requests/in_progress/hi2a.yaml
+++ b/requests/in_progress/hi2a.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: sfFyqTzu
 amp_submit_time: 2023-06-14T21:22:58.370Z
+amp_start_time: 2023-06-14T21:23:08.741Z
+amp_workflow_id: DSTQUe3y
