--- a/requests/completed/hi2a.yaml
+++ b/requests/completed/hi2a.yaml
@@ -9,3 +9,8 @@ amp_uid: sfFyqTzu
 amp_submit_time: 2023-06-14T21:22:58.370Z
 amp_start_time: 2023-06-14T21:23:08.741Z
 amp_workflow_id: DSTQUe3y
+amp_end_time: 2023-06-14T21:23:42.263Z
+
+output: |
+  
+  
