Update on completion of hi2b.yaml

--- a/requests/completed/hi2b.yaml
+++ b/requests/completed/hi2b.yaml
@@ -9,3 +9,8 @@ amp_uid: GHwr9udS
 amp_submit_time: 2023-06-14T21:23:00.157Z
 amp_start_time: 2023-06-14T21:23:04.409Z
 amp_workflow_id: AN1YKwab
+amp_end_time: 2023-06-14T21:24:38.954Z
+
+output: |
+  
+  
