Update on start of say_hi.yaml

--- a/requests/in_progress/say_hi.yaml
+++ b/requests/in_progress/say_hi.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: tPXexsvv
 amp_queue_time: 2023-06-14T22:07:58.605Z
+amp_start_time: 2023-06-14T22:08:03.069Z
+amp_workflow_id: AaVKS433
