Update on completion of say_hi.yaml

--- a/requests/completed/say_hi.yaml
+++ b/requests/completed/say_hi.yaml
@@ -9,3 +9,8 @@ amp_uid: tPXexsvv
 amp_queue_time: 2023-06-14T22:07:58.605Z
 amp_start_time: 2023-06-14T22:08:03.069Z
 amp_workflow_id: AaVKS433
+amp_end_time: 2023-06-14T22:09:36.184Z
+# completed without error
+output: |
+  (no output)
+  
