Update on start of h3b.yaml

--- a/requests/in_progress/h3b.yaml
+++ b/requests/in_progress/h3b.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: RwiigGeL
 amp_queue_time: 2023-06-14T22:13:51.000Z
+amp_start_time: 2023-06-14T22:13:57.696Z
+amp_workflow_id: jF5SZJOV
