Update on start of h3c.yaml

--- a/requests/in_progress/h3c.yaml
+++ b/requests/in_progress/h3c.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: ERwHbT2o
 amp_queue_time: 2023-06-14T22:13:52.883Z
+amp_start_time: 2023-06-14T22:14:01.723Z
+amp_workflow_id: DsA8akYE
