--- a/requests/in_progress/h3a.yaml
+++ b/requests/in_progress/h3a.yaml
@@ -2,3 +2,5 @@ action: say_hi
 # data below this line added by AMP EMR handler
 amp_uid: zALRjmNT
 amp_queue_time: 2023-06-14T22:13:48.973Z
+amp_start_time: 2023-06-14T22:14:04.749Z
+amp_workflow_id: WR1BfCGk
