Update on completion of h3c.yaml

--- a/requests/completed/h3c.yaml
+++ b/requests/completed/h3c.yaml
@@ -9,3 +9,8 @@ amp_uid: ERwHbT2o
 amp_queue_time: 2023-06-14T22:13:52.883Z
 amp_start_time: 2023-06-14T22:14:01.723Z
 amp_workflow_id: DsA8akYE
+amp_end_time: 2023-06-14T22:14:25.006Z
+# completed without error
+output: |
+  Said hi to Axon 3 Then waited for 20s
+  
