--- a/requests/in_progress/say_hi.yaml
+++ b/requests/in_progress/say_hi.yaml
@@ -8,3 +8,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: oF6l9CXv
 amp_queue_time: 2023-06-14T22:18:57.005Z
+amp_start_time: 2023-06-14T22:19:00.859Z
+amp_workflow_id: n2K8Zhj9
