Update on start of say_hi.yaml

--- a/requests/in_progress/say_hi.yaml
+++ b/requests/in_progress/say_hi.yaml
@@ -6,3 +6,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: yQyZzVwV
 amp_queue_time: 2023-06-14T22:35:40.471Z
+amp_start_time: 2023-06-14T22:35:45.099Z
+amp_workflow_id: MP0Q3hkw
