Update on start of say_hi.yaml

--- a/requests/in_progress/say_hi.yaml
+++ b/requests/in_progress/say_hi.yaml
@@ -6,3 +6,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: ttLfooC5
 amp_queue_time: 2023-06-14T22:52:35.447Z
+amp_start_time: 2023-06-14T22:52:41.532Z
+amp_workflow_id: LJcdsoCP
