Update on completion of say_hi.yaml

--- a/requests/completed/say_hi.yaml
+++ b/requests/completed/say_hi.yaml
@@ -8,3 +8,10 @@ amp_uid: ttLfooC5
 amp_queue_time: 2023-06-14T22:52:35.447Z
 amp_start_time: 2023-06-14T22:52:41.532Z
 amp_workflow_id: LJcdsoCP
+amp_end_time: 2023-06-14T22:54:14.788Z
+# completed without error
+output: |
+  Said hi to Axon
+  
+  Then waited for 1m 30s
+  
