--- a/requests/in_progress/restart.yaml
+++ b/requests/in_progress/restart.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: F7QoCJ1r
 amp_queue_time: 2023-06-14T23:07:13.355Z
+amp_start_time: 2023-06-14T23:07:18.395Z
+amp_workflow_id: PTjTky2c
