--- a/requests/completed/restart.yaml
+++ b/requests/completed/restart.yaml
@@ -9,3 +9,8 @@ amp_uid: F7QoCJ1r
 amp_queue_time: 2023-06-14T23:07:13.355Z
 amp_start_time: 2023-06-14T23:07:18.395Z
 amp_workflow_id: PTjTky2c
+amp_end_time: 2023-06-14T23:07:21.950Z
+error : true
+output: |
+  org.apache.brooklyn.util.exceptions.PropagatedRuntimeException: No effector matching 'handle-restart'
+  
