Update on start of say_hi.yaml

--- a/requests/in_progress/say_hi.yaml
+++ b/requests/in_progress/say_hi.yaml
@@ -7,3 +7,5 @@ parameters:
 # data below this line added by AMP EMR handler
 amp_uid: X2vQe9Uy
 amp_queue_time: 2023-06-15T12:53:20.997Z
+amp_start_time: 2023-06-15T12:53:25.062Z
+amp_workflow_id: ugVCRJ2s
